// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTMLMarker with portal expect to render correctly 1`] = `
<HTMLMarker
  hit={
    Object {
      "_geoloc": Object {
        "lat": 10,
        "lng": 12,
      },
    }
  }
  options={Object {}}
>
  <span>
    This is the children.
  </span>
</HTMLMarker>
`;

exports[`HTMLMarker with unstable_renderSubtreeIntoContainer expect to render correctly 1`] = `
<HTMLMarker
  hit={
    Object {
      "_geoloc": Object {
        "lat": 10,
        "lng": 12,
      },
    }
  }
  options={Object {}}
/>
`;
